modal's adicionados e pequenas alterações no design

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <p>Boas-vindas ao Bistrô Serenatto! Um ambiente aconchegante e acolhedor para apreciar um bom café.</p>
       </div>
     </section>
+
     <section class="py-5">
       <h2 class="text-center fw-bold pb-1">Nossos serviços</h2>
 
@@ -89,7 +90,8 @@
             <p class="card-text">Buffet e catering personalizado para eventos, produções e celebrações. Com
               um menu variado e adaptável às preferências do cliente, atendimento atencioso e
               profissional.</p>
-            <a href="#" class="btn botao-padrao w-100 fw-bold mt-3">Quero detalhes</a>
+            <a href="#" data-bs-toggle="offcanvas" data-bs-target="#canvas-2" aria-controls="offcanvasRight"
+              class="btn botao-padrao w-100 fw-bold mt-3">Quero detalhes</a>
           </div>
         </div>
 
@@ -100,7 +102,8 @@
             <p class="card-text">Para quem deseja desfrutar no conforto de casa, oferecemos delivery dos
               produtos. Com o mesmo cardápio variado de sempre, sem perder nosso sabor e padrão de
               qualidade.</p>
-            <a href="#" class="btn botao-padrao w-100 fw-bold mt-3">Quero detalhes</a>
+            <a href="#" data-bs-toggle="offcanvas" data-bs-target="#canvas-3" aria-controls="offcanvasRight"
+              class="btn botao-padrao w-100 fw-bold mt-3">Quero detalhes</a>
           </div>
         </div>
       </div>
@@ -113,6 +116,70 @@
           oferecemos ambiente de coworking!</p>
       </div>
     </section>
+
+    <section class="py-5">
+
+      <h2 class="fw-bold text-center pb-1">Nossos produtos</h2>
+
+      <div class="row mx-0">
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card border-0 mx-auto btn" data-bs-toggle="modal" data-bs-target="#modal-1" style="width: 18rem;">
+            <img src="./assets/produtos-cafe-tradicional.png" class="card-img-top" alt="Café preto.">
+            <div class="card-body">
+              <h3 class="card-text text-center fw-bold">Cafés Tradicionais</h3>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card border-0 mx-auto btn" data-bs-toggle="modal" data-bs-target="#modal-2" style="width: 18rem;">
+            <img src="./assets/produtos-cafe-especial.png" class="card-img-top" alt="Café expresso.">
+            <div class="card-body">
+              <h3 class="card-text fw-bold text-center">Cafés Especiais</h3>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card border-0 mx-auto btn" style="width: 18rem;">
+            <img src="./assets/produtos-vitaminas.png" class="card-img-top" alt="Vitaminas variadas">
+            <div class="card-body">
+              <h3 class="card-text text-center fw-bold text-nowrap">Smoothies e Vitaminas</h3>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card border-0 mx-auto btn" style="width: 18rem;">
+            <img src="./assets/produtos-paes.png" class="card-img-top" alt="Pães variados">
+            <div class="card-body">
+              <h3 class="card-text text-center fw-bold">Pães e Focaccias</h3>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card border-0 mx-auto btn" style="width: 18rem;">
+            <img src="./assets/produtos-doces.png" class="card-img-top" alt="Bolo de morango">
+            <div class="card-body">
+              <h3 class="card-text text-center fw-bold">Doces</h3>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card border-0 mx-auto btn" style="width: 18rem;">
+            <img src="./assets/produtos-salgados.png" class="card-img-top" alt="Torta salgada">
+            <div class="card-body">
+              <h3 class="card-text text-center fw-bold">Salgados</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
     <section class="banners banner-3 ">
 
     </section>
@@ -128,14 +195,15 @@
       <div class="accordion" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button class="botao-padrao accordion-button fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-              aria-expanded="true" aria-controls="collapseOne">
+            <button class="botao-padrao accordion-button fw-bold" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
               Café
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-             <p>Temos um excelente espaço para alimentação e descanso, com a vitrine recheada de doces, salgados, cafés tradicionais e especiais para desfrutar seus melhores momentos.</p>
+              <p>Temos um excelente espaço para alimentação e descanso, com a vitrine recheada de doces, salgados, cafés
+                tradicionais e especiais para desfrutar seus melhores momentos.</p>
             </div>
           </div>
         </div>
@@ -148,7 +216,8 @@
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <p>Além de cafés o dia todo, oferecemos refeições em horário de almoço (11 às 15h) com pratos deliciosos de bistrô!</p>
+              <p>Além de cafés o dia todo, oferecemos refeições em horário de almoço (11 às 15h) com pratos deliciosos
+                de bistrô!</p>
             </div>
           </div>
         </div>
@@ -161,9 +230,142 @@
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <p>Temos espaço adequado para trabalho, com conexão de internet de alta velocidade e instalações confortáveis para reuniões.</p>
+              <p>Temos espaço adequado para trabalho, com conexão de internet de alta velocidade e instalações
+                confortáveis para reuniões.</p>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- canvas-2 -->
+
+  <div class="offcanvas offcanvas-end" tabindex="-1" id="canvas-2" aria-labelledby="offcanvasRightLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title fw-bold" id="offcanvasRightLabel">Buffet</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="botao-padrao accordion-button fw-bold" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              Eventos
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <p>Organizamos buffet com cardápios variados e personalizados para casamentos, festas de aniversário e
+                outros eventos! </p>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="botao-padrao accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Catering
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <p>Oferecemos serviço de alimentação variada para coffee breaks, produções e bastidores.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- canvas-3 -->
+  <div class="offcanvas offcanvas-end" tabindex="-1" id="canvas-3" aria-labelledby="offcanvasRightLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title fw-bold" id="offcanvasRightLabel">Delivery</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="botao-padrao accordion-button fw-bold" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              Encomendas para eventos
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <p>Produzimos e entregamos os itens de café de nosso cardápio em grandes quantidades para seus eventos!
+                Basta entrar em contato e fazer a reserva com 72h de antecedência.</p>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="botao-padrao accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Entrega por aplicativo
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <p>Entregamos pelos aplicativos Ifood e Rappi. Consulte nosso cardápio por lá e faça seu pedido!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- modal-1 -->
+  <div class="modal fade" id="modal-1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 class="modal-title fw-bold fs-5" id="exampleModalLabel">Cafés tradicionais</h2>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <img class="w-100" src="assets/produtos-cafe-tradicional.png" alt="xícara de café preto">
+          <p>O café Serenatto é conhecido por seus blends tradicionais e saborosos, que agradam aos amantes da bebida.
+            Nossos grãos são cuidadosamente selecionados e torrados para produzir um aroma rico e sabor
+            equilibrado.</p>
+          <p>Entre os cafés mais tradicionais da casa, destaca-se o "Café Serenatto", um blend exclusivo de
+            grãos com notas de chocolate e caramelo. Outra opção popular é o "Café Italiano", um café expresso encorpado
+            e intenso. Já o "Café Cappuccino" é uma escolha clássica para quem prefere uma bebida cremosa e suave.</p>
+        </div>
+        <div class="modal-footer mx-auto">
+          <button type="button" class="btn btn-secondary botao-padrao border-0" data-bs-dismiss="modal">Fechar
+            janela</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- modal-2 -->
+
+  <div class="modal fade" id="modal-2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 class="modal-title fw-bold fs-5" id="exampleModalLabel">Cafés especiais</h2>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <img class="w-100" src="assets/produtos-cafe-especial.png" alt="xícara de café preto">
+          <p>Somos conhecidos também por nossos cafés especiais, que são cuidadosamente preparados com grãos
+            selecionados de alta qualidade e técnicas de preparo precisas.</p>
+          <p>Entre as opções de cafés especiais do Café & Bistrô Serenatto, destacamos o café aeropress, que é preparado
+            com uma técnica de imersão e pressão, resultando em uma bebida de sabor intenso e aroma acentuado. Outra
+            opção popular é o café Hario V60, que é preparado com um filtro de papel em formato de cone e resulta em uma
+            bebida limpa e suave, ressaltando as notas sensoriais dos grãos. Além disso, oferecemos uma variedade de
+            bebidas geladas, como o café gelado, que é preparado com grãos torrados escuros e servido com gelo e leite,
+            resultando em uma bebida refrescante e saborosa.</p>
+        </div>
+        <div class="modal-footer mx-auto">
+          <button type="button" class="btn btn-secondary botao-padrao border-0" data-bs-dismiss="modal">Fechar
+            janela</button>
         </div>
       </div>
     </div>
