--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     rel="stylesheet">
 </head>
 
-<body>
+<body data-bs-theme="light">
   <header class="">
     <nav class="navbar-expand-lg navbar bg-body-tertiary fixed-top">
       <div class="container-fluid">
@@ -43,10 +43,13 @@
                 <a class="nav-link" href="#">Sobre</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="#contato">Contato</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#">
                   <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                    <label class="form-check-label" for="flexSwitchCheckDefault">Modo noturno</label>
+                    <input class="form-check-input" type="checkbox" role="switch" id="modo-noturno">
+                    <label class="form-check-label" for="modo-noturno">Modo noturno</label>
                   </div>
                 </a>
               </li>
@@ -183,7 +186,56 @@
     <section class="banners banner-3 ">
 
     </section>
+
+    <section class="py-4 container mx-auto w-50">
+      <div class="border border-2 rounded p-3">
+        <h3 class="fw-bold p-3">Entre e contato</h3>
+        <div class="row">
+          <div class="col-10 col-xl-8 mx-auto">
+            <form id="contato">
+              <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="floatingNome" placeholder="Nome">
+                <label for="floatingNome">Nome</label>
+              </div>
+              <div class="form-floating mb-3">
+                <input type="email" class="form-control" id="floatingEmail" placeholder="name@example.com">
+                <label for="floatingEmail">Email</label>
+              </div>
+              <div class="form-floating mb-3">
+                <input type="number" class="form-control" id="floatingTelefone" placeholder="Telefone">
+                <label for="floatingTelefone">Telefone</label>
+              </div>
+              <select class="form-select mb-3" aria-label="Default select example">
+                <option selected>Preferência de contato:</option>
+                <option value="1">WhatsApp</option>
+                <option value="2">Email</option>
+                <option value="3">Ligação</option>
+              </select>
+              <label for="nivel-satisfacao" class="form-label">Nível de satisfação</label>
+              <input type="range" class="form-range input-range" id="nivel-satisfacao">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                <label class="form-check-label" for="flexCheckDefault">
+                  Deseja receber novidades por email ?
+                </label>
+              </div>
+              <button type="button" class="btn botao-padrao w-100 p-2 fw-bold mt-3 py-3">enviar</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
+  <footer class="text-center fundo">
+    <section class="container p-4 pb-0">
+      <a href="#"><i class="bi bi-whatsapp btn"></i></a>
+      <a href="#"><i class="bi bi-instagram btn"></i></a>
+      <a href="#"><i class="bi bi-twitter btn"></i></a>
+      <div class="p-3">
+        2023 <i class="bi bi-c-circle"></i> Desenvolvido por Vitor Hugo | Projeto fictício sem fins comerciais
+      </div>
+    </section>
+  </footer>
 
   <!-- canvas 1 -->
   <div class="offcanvas offcanvas-end" tabindex="-1" id="canvas-1" aria-labelledby="offcanvasRightLabel">
@@ -372,8 +424,10 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
-    crossorigin="anonymous"></script>
+  integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+  crossorigin="anonymous"></script>
+
+  <script src="script.js"></script>
 </body>
 
 </html>
